# Projet_indus

./: .gitignore  README.md  forward_position_controller  haply.bash  install_all.sh  phantom.bash  ur.bash
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/omni_common/lib/omni_common/: omni  omni_state
install/omni_common/share/ament_index/resource_index/parent_prefix_path/: omni_common
install/omni_common/share/omni_common/: package.sh
install/omni_common/share/omni_common/launch/: omni_state.launch.py
install/omni_description/share/omni_description/: local_setup.sh  package.sh
install/omni_msgs/local/lib/python3.10/dist-packages/omni_msgs/: _omni_msgs_s.ep.rosidl_typesupport_c.c  _omni_msgs_s.ep.rosidl_typesupport_introspection_c.c
install/omni_msgs/local/lib/python3.10/dist-packages/omni_msgs-0.1.0-py3.10.egg-info/: PKG-INFO
install/omni_msgs/share/ament_index/resource_index/package_run_dependencies/: omni_msgs
install/omni_msgs/share/omni_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/omni_msgs/share/omni_msgs/cmake/: export_omni_msgs__rosidl_generator_cExport.cmake  export_omni_msgs__rosidl_generator_pyExport.cmake  export_omni_msgs__rosidl_typesupport_fastrtps_cExport.cmake  omni_msgsConfig.cmake  omni_msgs__rosidl_typesupport_cExport.cmake  omni_msgs__rosidl_typesupport_cppExport.cmake  omni_msgs__rosidl_typesupport_introspection_cExport.cmake  omni_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake
install/omni_msgs/share/omni_msgs/msg/: OmniFeedback.idl
install/ur_control/lib/ur_control/: ur3e
install/ur_control/share/ur_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur_moveit-config/share/ament_index/resource_index/parent_prefix_path/: ur_moveit-config
install/ur_moveit-config/share/ur_moveit-config/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ur_moveit-config/share/ur_moveit-config/config/: ur3e.srdf
install/ur_moveit-config/share/ur_moveit-config/launch/: moveit_rviz.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
install/ur_to_touch_haptic_teleoperation/share/ament_index/resource_index/package_run_dependencies/: ur_to_touch_haptic_teleoperation
install/ur_to_touch_haptic_teleoperation/share/ur_to_touch_haptic_teleoperation/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
install/ur_to_touch_haptic_teleoperation/share/ur_to_touch_haptic_teleoperation/cmake/: ur_to_touch_haptic_teleoperationConfig.cmake
install/ur_to_touch_haptic_teleoperation/share/ur_to_touch_haptic_teleoperation/launch/: ur_launch.py  ur_norobot_test.py  ur_to_touch_haptic_teleoperation_launch.py
install/ur_udp/lib/ur_udp/: phantom_udp  ur_udp
install/ur_udp/share/ament_index/resource_index/package_run_dependencies/: ur_udp
install/ur_udp/share/ur_udp/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ur_udp/share/ur_udp/cmake/: ur_udpConfig.cmake
log/: latest_build
omni_msgs/: package.xml
src/Geomagic_Touch_ROS2/omni_common/launch/: omni_state.launch.py
src/Geomagic_Touch_ROS2/omni_common/src/: omni_state.cpp
src/Geomagic_Touch_ROS2/omni_msgs/: CMakeLists.txt  package.xml
src/ros2_haply_inverse3_python/: README.md  package.xml  setup.cfg  setup.py
src/ros2_haply_inverse3_python/ros2_haply_inverse3_python/: haply_inverse3_pos.py  haply_inverse3_quaternion.py
src/ur3e_moveit_config/: CMakeLists.txt  package.xml
src/ur3e_moveit_config/config/: ur_servo.yaml
src/ur3e_moveit_config/launch/: ur_moveit.launch.py
src/ur_control/: CMakeLists.txt  package.xml  setup.py
src/ur_control/launch/: haply_launch.py  ur_launch.py
src/ur_control/src/: ur3e.cpp
src/ur_control/ur_control/: ur3e.py
src/ur_moveit-config/: .setup_assistant  CMakeLists.txt
src/ur_moveit-config/config/: ur3e.urdf.xacro
src/ur_moveit-config/launch/: demo.launch.py  move_group.launch.py  rsp.launch.py  setup_assistant.launch.py  warehouse_db.launch.py
src/ur_to_touch_haptic_teleoperation/: CMakeLists.txt
src/ur_to_touch_haptic_teleoperation/Projet_indus/: README.md
src/ur_to_touch_haptic_teleoperation/config/: servo_config.yaml  teleop_config.yaml
src/ur_to_touch_haptic_teleoperation/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/ur_to_touch_haptic_teleoperation/install/ur_to_touch_haptic_teleoperation/share/ur_to_touch_haptic_teleoperation/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/ur_to_touch_haptic_teleoperation/launch/: phantom_launch.py  script_joint.launch.py  ur_launch.py
src/ur_to_touch_haptic_teleoperation/log/: latest_build
src/ur_to_touch_haptic_teleoperation/src/: haptic_feedback.cpp  phantom_to_ur.py  phantom_ur2.py  pid.py  script.py  script_joint.py  teleoperate.cpp  test.py  ur3e.cpp  ur3e.py  ur3etest.cpp
src/ur_to_touch_haptic_teleoperation/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/ur_to_touch_haptic_teleoperation/src/log/: latest_build
src/ur_udp/: CMakeLists.txt
src/ur_udp/include/ur_udp/: message.hpp
src/ur_udp/src/: phantom_udp.cpp  ur_udp.cpp
src/ur_udp/src/install/: setup.sh
ur_udp/: package.xml
ur_udp/include/ur_udp/: message.hpp
ur_udp/src/: phantom_udp.cpp  ur_udp.cpp
ur_udp/src/install/: local_setup.sh
ur_udp/src/log/: latest_build
