<?xml version="1.0"?>
<package format="3">
  <name>omni_msgs</name>
  <version>0.1.0</version>
  <description>Messages for Omni</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Dépendances pour la construction -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dépendances pour les messages -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Dépendances pour l'exécution -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Ajout obligatoire pour les messages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
