<?xml version="1.0"?>
<package format="3">
  <name>ur_to_touch_haptic_teleoperation</name>
  <version>0.1.0</version>
  <description>The ur_to_touch_haptic_teleoperation package migrated to ROS 2</description>

  <maintainer email="mustafaoltan@gmail.com">Oltan Sevinc</maintainer>

  <!-- License -->
  <license>Apache 2.0</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Runtime and Build Dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>moveit_servo</depend>
  <depend>omni_common</depend>
  <depend>omni_state</depend>
  <depend>yaml-cpp</depend>
  <exec_depend>ament_index</exec_depend>

  
  <!-- Testing Dependency -->
  <test_depend>ament_cmake_gtest</test_depend>

  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
